[package]
name = "genabi"
version = "0.0.0"
authors = ["Kiyoshi Nakao <kikehara@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
abi = { path = "../abi" }
syn = { version = "1.0", features = ["full", "visit"] }
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace]
